--- a/index.html
+++ b/index.html
@@ -49,14 +49,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="w3-twothird">
       <h1>Qu'est-ce que DevOps ?</h1>
       <h5 class="w3-padding-32">DevOps est une approche méthodologique qui vise à combiner les processus de développement logiciel (Dev) et d'opérations informatiques (Ops). Il favorise la collaboration et l'automatisation pour accélérer la livraison de logiciels de qualité, en intégrant les développeurs et les opérationnels tout au long du cycle de vie d'une application.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      <img src="vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
     </div>
   </div>
 </div>
