Ajout de la partie Azure with DevOps

--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      <img src="Microsoft-Azure.png" alt="Azure with DevOps" width="250px">
     </div>
 
     <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h1>DevOps dans Microsoft Azure</h1>
+      <h5 class="w3-padding-32">DevOps dans Azure est une approche qui combine les pratiques DevOps avec les services et outils fournis par Microsoft Azure pour améliorer l'efficacité et la qualité du développement logiciel. Il s'agit d'une culture de collaboration, de communication et d'automatisation continue entre les équipes de développement et d'exploitation.</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p class="w3-text-grey">Avec DevOps dans Azure, vous pouvez automatiser les processus de développement, de test et de déploiement des applications, ce qui accélère la livraison des fonctionnalités et réduit les délais de mise sur le marché. Azure offre une gamme de services intégrés tels que Azure Pipelines, 
+        Azure Boards, Azure Repos, Azure Test Plans et Azure Artifacts, qui couvrent l'ensemble du cycle de vie du développement logiciel.</p>
     </div>
   </div>
 </div>
