--- a/index.html
+++ b/index.html
@@ -1,109 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-<title>DevOps ESTIAM</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href=/Users/elias/DevOps-2023-ESTIAM/css>
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
-</style>
+  <meta charset="UTF-8">
+  <title>Qu'est-ce que le DevOps sur Microsoft Azure?</title>
 </head>
+
 <body>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Accueil</a>
-    <a href="DevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps ?</a>
-    <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure devOps</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Test1</a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">DevOps Day Start</h1>
-  <p class="w3-xlarge">Template by Ouali, Theo & Elias</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
-</header>
-
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Qu'est-ce que DevOps ?</h1>
-      <h5 class="w3-padding-32">DevOps est une approche méthodologique qui vise à combiner les processus de développement logiciel (Dev) et d'opérations informatiques (Ops). Il favorise la collaboration et l'automatisation pour accélérer la livraison de logiciels de qualité, en intégrant les développeurs et les opérationnels tout au long du cycle de vie d'une application.</h5>
-      
-    </div>
-
-    <div class="w3-third w3-center">
-      <img src="vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
-    </div>
-  </div>
-</div>
-
-<!-- Second Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <img src="Microsoft-Azure.png" alt="Azure with DevOps" width="250px">
-    </div>
-
-    <div class="w3-twothird">
-      <h1>DevOps dans Microsoft Azure</h1>
-      <h5 class="w3-padding-32">DevOps dans Azure est une approche qui combine les pratiques DevOps avec les services et outils fournis par Microsoft Azure pour améliorer l'efficacité et la qualité du développement logiciel. Il s'agit d'une culture de collaboration, de communication et d'automatisation continue entre les équipes de développement et d'exploitation.</h5>
-
-      <p class="w3-text-grey">Avec DevOps dans Azure, vous pouvez automatiser les processus de développement, de test et de déploiement des applications, ce qui accélère la livraison des fonctionnalités et réduit les délais de mise sur le marché. Azure offre une gamme de services intégrés tels que Azure Pipelines, 
-        Azure Boards, Azure Repos, Azure Test Plans et Azure Artifacts, qui couvrent l'ensemble du cycle de vie du développement logiciel.</p>
-    </div>
-  </div>
-</div>
-
-<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Agilité, collaboration, excellence DevOps</h1>
-</div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
- </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
-
-<script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-</script>
-
-</body>
-</html>
+  <h1>Qu'est-ce que le DevOps sur Microsoft Azure?</h1>
+  <p> Le DevOps est une méthodologie de développement logiciel qui vise à combiner les pratiques de développement et
+    d'opérations (IT operations) afin de favoriser une collaboration étroite entre les équipes de développement et
+    d'exploitation d'un logiciel. Sur la plateforme Microsoft Azure, le DevOps est un ensemble d'outils, de services et
+    de bonnes pratiques qui permettent de mettre en œuvre cette approche DevOps. </p>
+  <h2>Principes clés du DevOps sur Azure</h2>
+  <p> Le DevOps sur Azure repose sur les principes suivants : </p>
+  <ul>
+    <li><strong>Collaboration :</strong> Le DevOps encourage la collaboration entre les équipes de développement,
+      d'opérations et d'autres parties prenantes tout au long du cycle de vie du logiciel.</li>
+    <li><strong>Automatisation :</strong> L'automatisation des processus est essentielle pour accélérer les
+      déploiements, réduire les erreurs et améliorer l'efficacité.</li>
+    <li><strong>Intégration continue :</strong> L'intégration continue consiste à intégrer fréquemment les modifications
+      de code dans un référentiel partagé, ce qui permet de détecter rapidement les problèmes et de garantir une qualité
+      continue.</li>
+    <li><strong></strong>
