modified:   DevOps.html

--- a/DevOps.html
+++ b/DevOps.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,23 +7,77 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Qu'est-ce que le DevOps sur Microsoft Azure?</title>
-</head>
+    <style>
+        body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Lato", sans-serif;
+        }
 
+        .w3-sidebar {
+            z-index: 3;
+            width: 250px;
+            top: 43px;
+            bottom: 0;
+            height: inherit;
+        }
+
+        .w3-navbar li a {
+            padding: 16px;
+            float: none;
+            color: #fff;
+        }
+
+        .w3-main, #main {
+            margin-left: 250px;
+            margin-right: 250px;
+            padding: 0;
+        }
+
+        .w3-teal, .w3-hover-teal:hover {
+            background-color: #009688 !important;
+            color: #fff !important;
+        }
+
+        .w3-container {
+            padding: 0.01em 16px;
+        }
+
+        .w3-border {
+            border: 1px solid #ccc !important;
+        }
+
+        .w3-card-4 {
+            padding: 20px;
+            margin-top: 30px;
+            background-color: #fff;
+            color: #000;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+    </style>
+</head>
 <body>
-    <h1>Qu'est-ce que le DevOps sur Microsoft Azure?</h1>
-    <p> Le DevOps est une méthodologie de développement logiciel qui vise à combiner les pratiques de développement et
-        d'opérations (IT operations) afin de favoriser une collaboration étroite entre les équipes de développement et
-        d'exploitation d'un logiciel. Sur la plateforme Microsoft Azure, le DevOps est un ensemble d'outils, de services
-        et de bonnes pratiques qui permettent de mettre en œuvre cette approche DevOps. </p>
-    <h2>Principes clés du DevOps sur Azure</h2>
-    <p> Le DevOps sur Azure repose sur les principes suivants : </p>
-    <ul>
-        <li><strong>Collaboration :</strong> Le DevOps encourage la collaboration entre les équipes de développement,
-            d'opérations et d'autres parties prenantes tout au long du cycle de vie du logiciel.</li>
-        <li><strong>Automatisation :</strong> L'automatisation des processus est essentielle pour accélérer les
-            déploiements, réduire les erreurs et améliorer l'efficacité.</li>
-        <li><strong>Intégration continue :</strong> L'intégration continue consiste à intégrer fréquemment les
-            modifications de code dans un référentiel partagé, ce qui permet de détecter rapidement les problèmes et de
-            garantir une qualité continue.</li>
-        <li><strong></strong>
+
+<!-- Sidebar -->
+<nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+    <h4 class="w3-bar-item">Menu</h4>
+    <a href="#" class="w3-bar-item w3-button w3-teal">Home</a>
+    <a href="#" class="w3-bar-item w3-button">About DevOps</a>
+    <a href="#" class="w3-bar-item w3-button">Benefits</a>
+    <a href="#" class="w3-bar-item w3-button">Principles</a>
+    <a href="#" class="w3-bar-item w3-button">Tools</a>
+    <a href="#" class="w3-bar-item w3-button">Conclusion</a>
+</nav>
+
+<!-- Main Content -->
+<div class="w3-main" id="main">
+
+    <header class="w3-container w3-teal">
+        <h1>Introduction to DevOps</h1>
+    </header>
+
+    <div class="w3-container">
+        <div class="w3-card-4">
+            <h3>About DevOps</h3>
+            <p>
+                DevOps is a set of practices that combines software development (Dev) and IT operations (Ops). It aims to
+                shorten the systems development life cycle while delivering features, fixes, and updates frequently in close
+                collaboration between development and operations teams.
