modified:   DevOps.html 	modified:   index.html

--- a/DevOps.html
+++ b/DevOps.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        body, h1, h2, h3, h4, h5, h6 {{font-family: "Lato", sans-serif}
-        .w3-bar,h1, {font-family: "Montserrat", sans-serif}
-        .fa-anchor,.fa-coffee {font-size:200px}
-        </style>   
+        body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Lato", sans-serif;
         }
 
         .w3-sidebar {
@@ -35,7 +33,7 @@
         }
 
         .w3-teal, .w3-hover-teal:hover {
-            background-color: #009688 !important;
+            background-color: #963e00 !important;
             color: #fff !important;
         }
 
