--- a/index.html
+++ b/index.html
@@ -8,13 +8,59 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
+<!-- <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 </head>
-<body>
+<body> -->
+  <style>
+    body, h1, h2, h3, h4, h5, h6 {
+        font-family: "Lato", sans-serif;
+    }
+
+    .w3-sidebar {
+        z-index: 3;
+        width: 250px;
+        top: 43px;
+        bottom: 0;
+        height: inherit;
+    }
+
+    .w3-navbar li a {
+        padding: 16px;
+        float: none;
+        color: #fff;
+    }
+
+    .w3-main, #main {
+        margin-left: 250px;
+        margin-right: 250px;
+        padding: 0;
+    }
+
+    .w3-teal, .w3-hover-teal:hover {
+        background-color: #963e00 !important;
+        color: #fff !important;
+    }
+
+    .w3-container {
+        padding: 0.01em 16px;
+    }
+
+    .w3-border {
+        border: 1px solid #ccc !important;
+    }
+
+    .w3-card-4 {
+        padding: 20px;
+        margin-top: 30px;
+        background-color: #fff;
+        color: #000;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+</style>
 
 <!-- Navbar -->
 <div class="w3-top">
