--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Accueil</a>
     <a href="DevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps ?</a>
-    <a href="pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
+    <a href="Pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure devOps</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Test1</a>
   </div>
