modified:   Pipeline.html

--- a/Pipeline.html
+++ b/Pipeline.html
@@ -6,48 +6,69 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        body, h1, h2, h3, h4, h5, h6 {
+        body,
+        h1, h2, h3, h4, h5, h6 {
             font-family: "Lato", sans-serif;
         }
 
-        .w3-bar, h1, button {
-            font-family: "Montserrat", sans-serif;
+        .w3-sidebar {
+            z-index: 3;
+            width: 250px;
+            top: 43px;
+            bottom: 0;
+            height: inherit;
         }
 
-        .fa-anchor, .fa-coffee {
-            font-size: 200px;
+        .w3-navbar li a {
+            padding: 16px;
+            float: none;
+            color: #fff;
+        }
+
+        .w3-main,
+        #main {
+            margin-left: 250px;
+            margin-right: 250px;
+            padding: 0;
+        }
+
+        .w3-teal,
+        .w3-hover-teal:hover {
+            background-color: #fa7b03 !important;
+            color: #fff !important;
+        }
+
+        .w3-container {
+            padding: 0.01em 16px;
+        }
+
+        .w3-border {
+            border: 1px solid #ccc !important;
+        }
+
+        .w3-card-4 {
+            padding: 20px;
+            margin-top: 30px;
+            background-color: #fff;
+            color: #000;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
     </style>
 </head>
 <body>
 
-<header class="w3-container w3-teal">
-    <h1>Explication d'une Pipeline</h1>
-</header>
 
-<div class="w3-container">
-    <div class="w3-card-4">
-        <h3>Qu'est-ce qu'une Pipeline ?</h3>
-        <p>
-            Une pipeline est un concept clé dans les pratiques DevOps. C'est un ensemble d'étapes automatisées qui permettent
-            de gérer le flux de travail lors du développement et du déploiement de logiciels. Une pipeline typique comprend
-            plusieurs phases, telles que la compilation, les tests, la création de packages, le déploiement et la surveillance.
-            Chaque étape de la pipeline est conçue pour effectuer une tâche spécifique et peut être exécutée automatiquement
-            lorsque des modifications sont apportées au code source.
-        </p>
-        <p>
-            L'objectif principal d'une pipeline est d'automatiser le processus de développement et de déploiement, ce qui permet
-            d'obtenir des livraisons rapides, régulières et fiables des applications. En utilisant une pipeline, les équipes
-            peuvent réduire les erreurs humaines, améliorer la qualité du logiciel, accélérer le déploiement et faciliter la
-            collaboration entre les développeurs, les testeurs et les opérations.
-        </p>
-        <p>
-            Les pipelines peuvent être configurées à l'aide d'outils et de technologies spécifiques, tels que Jenkins, GitLab CI/CD,
-            Azure DevOps, CircleCI, Travis CI, etc. Ces outils fournissent des fonctionnalités pour créer, exécuter et gérer les
-            différentes étapes de la pipeline, ainsi que pour surveiller et analyser les performances du processus de développement.
-        </p>
-    </div>
-</div>
+<!-- Main Content -->
+<div class="w3-main" id="main">
 
-</body>
-</html>
+    <header class="w3-container w3-teal">
+        <h1>Explication d'une Pipeline</h1>
+    </header>
+
+    <div class="w3-container">
+        <div class="w3-card-4">
+            <h3>Qu'est-ce qu'une Pipeline ?</h3>
+            <p>
+                Une pipeline est un concept clé dans les pratiques DevOps. C'est un ensemble d'étapes automatisées qui permettent
+                de gérer le flux de travail lors du développement et du déploiement de logiciels. Une pipeline typique comprend
+                plusieurs phases, telles que la compilation, les tests, la création de packages, le déploiement et la
