--- a/DevOps.html
+++ b/DevOps.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body,
-        h1,h2,h3,h4,h5,h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             font-family: "Lato", sans-serif;
         }
 
@@ -64,8 +69,8 @@
     <!-- Sidebar -->
     <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
         <h4 class="w3-bar-item">Menu</h4>
-        <a href="#" class="w3-bar-item w3-button w3-teal">Home</a>
-        <a href="#" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
+        <a href="w3-card-4" class="w3-bar-item w3-button w3-teal">Home</a>
+        <a href="w3-container2" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
         <a href="#" class="w3-bar-item w3-button">Principes clés</a>
         <a href="#" class="w3-bar-item w3-button">Outils</a>
         <a href="#" class="w3-bar-item w3-button">Conclusion</a>
@@ -78,7 +83,7 @@
             <h1>Introduction à DevOps</h1>
         </header>
 
-        <div class="w3-container">
+        <div class="w3-card-5">
             <div class="w3-card-4">
                 <h3>A propos de DevOps</h3>
                 <p>
@@ -86,3 +91,40 @@
                     informatiques (Ops). Son objectif est de raccourcir le cycle de vie du développement des systèmes
                     tout en livrant fréquemment des fonctionnalités, des correctifs et des mises à jour en étroite
                     collaboration entre les équipes de développement et les équipes opérationnelles.
+
+                    <!-- bénéfit Content -->
+                <div class="w3-main" id="main">
+
+                    <header class="w3-container w3-teal">
+                        <h1>Introduction à DevOps</h1>
+                    </header>
+
+                    <div class="w3-container2">
+                        <div class="w3-card-5">
+                            <h3>Les Bénéfice du DevOps</h3>
+                            <p>
+                                Voici quelques-uns des principaux avantages du DevOps :
+
+                               - Livraison plus rapide des produits : Le DevOps élimine les silos et les processus
+                                manuels entre les équipes de développement et d'exploitation, permettant une livraison
+                                plus rapide des produits sur le marché.
+
+                               - Qualité améliorée : Les processus DevOps incluent des tests de qualité rigoureux tout au
+                                long du cycle de vie de développement des logiciels, ce qui améliore la qualité du
+                                produit final.
+
+                               - Meilleure collaboration : Le DevOps implique une collaboration plus étroite entre les
+                                équipes de développement et d'exploitation, ce qui améliore la communication et la
+                                compréhension mutuelle des objectifs et des défis de chaque équipe.
+
+                               - Réduction des coûts : Le DevOps permet d'automatiser de nombreuses tâches manuelles et
+                                répétitives, réduisant ainsi les coûts et les erreurs potentielles associées à ces
+                                tâches.
+
+                               - Flexibilité accrue : Le DevOps permet une approche plus agile et itérative du
+                                développement logiciel, ce qui permet aux entreprises de s'adapter plus rapidement aux
+                                changements du marché et des besoins des clients.
+
+                               - Amélioration de la sécurité : Les pratiques DevOps incluent une sécurité plus forte et
+                                des tests de sécurité tout au long du cycle de vie du développement logiciel, réduisant
+                                ainsi les risques de vulnérabilités de sécurité.
