--- a/src/pipeline.html
+++ b/src/pipeline.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Qu'est-ce qu'une pipeline sur Microsoft Azure?</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        body,
+        h1, h2, h3, h4, h5, h6 {
+            font-family: "Lato", sans-serif;
+        }
+
+        .w3-sidebar {
+            z-index: 3;
+            width: 250px;
+            top: 43px;
+            bottom: 0;
+            height: inherit;
+        }
+
+        .w3-navbar li a {
+            padding: 16px;
+            float: none;
+            color: #fff;
+        }
+
+        .w3-main,
+        #main {
+            margin-left: 250px;
+            margin-right: 250px;
+            padding: 0;
+        }
+
+        .w3-teal,
+        .w3-hover-teal:hover {
+            background-color: #fa7b03 !important;
+            color: #fff !important;
+        }
+
+        .w3-container {
+            padding: 0.01em 16px;
+        }
+
+        .w3-border {
+            border: 1px solid #ccc !important;
+        }
+
+        .w3-card-4 {
+            padding: 20px;
+            margin-top: 30px;
+            background-color: #fff;
+            color: #000;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+    </style>
 </head>
 <body>
-  <h1>Qu'est-ce qu'une pipeline sur Microsoft Azure?</h1>
-  <p>
-    Une pipeline sur Microsoft Azure est un concept clé dans le domaine de la gestion et de l'exécution des processus de développement et de déploiement de logiciels. Une pipeline est une séquence d'actions automatisées qui permettent de gérer et de contrôler le flux de travail du développement logiciel, de la construction du code à sa mise en production.
 
-  </p>
-  <h2>Composants d'une pipeline sur Azure</h2>
-  <p>
-    Une pipeline sur Azure est généralement constituée des éléments suivants :
 
-  </p>
-  <ul>
-    <li><strong>Code source :</strong> La pipeline est généralement déclenchée lorsque des modifications sont apportées au code source du projet.</li>
-    <li><strong>Build :</strong> Le processus de build compile le code source et génère un exécutable ou un package exécutable.</li>
-    <li><strong>Tests :</strong> Les tests automatisés sont exécutés pour s'assurer que le code fonctionne correctement.</li>
-    <li><strong>Déploiement :</strong> Une fois que les tests sont réussis, le code est déployé dans l'environnement de production ou de test approprié.</li>
-    <li><strong>Validation :</strong> Les validations supplémentaires peuvent être effectuées pour garantir la qualité du déploiement.</li>
-    <li><strong>Publication :</strong> Une fois que tout est vérifié, le code peut être publié et rendu disponible pour les utilisateurs finaux.</li>
-  </ul>
-  <h2>Avantages d'une pipeline sur Azure</h2>
-  <p>
-    L'utilisation d'une pipeline sur Azure présente plusieurs avantages, notamment :
+<!-- Main Content -->
+<div class="w3-main" id="main">
 
-  </p>
-  <ul>
-    <li><strong>Automatisation :</strong> Les pipelines permettent d'automatiser les tâches de développement et de déploiement, ce qui réduit les erreurs humaines et améliore l'efficacité.</li>
-    <li><strong>Intégration continue :</strong> Les pipelines sur Azure favorisent l'intégration continue, en permettant aux développeurs d'intégrer fréquemment leurs modifications de code dans le flux de travail global.</li>
-    <li><strong>Déploiement continu :</strong> Avec une pipeline, il est possible de mettre en place un déploiement continu, permettant aux modifications de code d'être déployées rapidement et en toute sécurité.</li>
-    <li><strong>Contrôle et visibilité :</strong> Les pipelines sur Azure offrent un contrôle et une visibilité accrus sur l'ensemble du processus de développement et de déploiement.</li>
-  </ul>
-  <h2>Conclusion</h2>
-  <p>
-    En résumé, une pipeline sur Microsoft Azure est un moyen puissant et automatisé de gérer le flux de travail du développement logiciel, de la construction du code à sa mise en production. Elle favorise l'intégration continue, le déploiement
-Collapse
+    <header class="w3-container w3-teal">
+        <h1>Explication d'une Pipeline</h1>
+    </header>
 
-has context menu
-Compose
+    <div class="w3-container">
+        <div class="w3-card-4">
+            <h3>Qu'est-ce qu'une Pipeline ?</h3>
+            <p>
+                Une pipeline est un concept clé dans les pratiques DevOps. C'est un ensemble d'étapes automatisées qui permettent
+                de gérer le flux de travail lors du développement et du déploiement de logiciels. Une pipeline typique comprend
+                plusieurs phases, telles que la compilation, les tests, la création de packages, le déploiement et la
