modified:   src/DevOps.html

--- a/src/DevOps.html
+++ b/src/DevOps.html
@@ -70,7 +70,7 @@
     <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
         <h4 class="w3-bar-item">Menu</h4>
         <a href="w3-card-4" class="w3-bar-item w3-button w3-teal">Home</a>
-        <a href="w3-container2" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
+        <a href="w3-card-5" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
         <a href="#" class="w3-bar-item w3-button">Principes clés</a>
         <a href="#" class="w3-bar-item w3-button">Outils</a>
         <a href="#" class="w3-bar-item w3-button">Conclusion</a>
