modified:   src/Benefic.html 	new file:   src/Principe.html

--- a/src/Principe.html
+++ b/src/Principe.html
@@ -74,15 +74,9 @@
 
     <div id="main" class="w3-main">
         <div class="w3-container w3-card-4">
-            <h1>Bénéfices du DevOps</h1>
-            <ul>
-                <li>Amélioration de la collaboration entre les équipes de développement et d'exploitation</li>
-                <li>Augmentation de la productivité grâce à l'automatisation des tâches</li>
-                <li>Amélioration de la qualité des logiciels grâce aux tests continus</li>
-                <li>Stabilité et fiabilité accrues avec une meilleure gestion des incidents</li>
-            </ul>
-        </div>
-    </div>
-</body>
-
-</html>
+            <h1>Principes clés du DevOps</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius placerat dui, a fringilla
+                tellus. Fusce pretium massa ac erat pharetra, eget dapibus ipsum congue. Vestibulum rutrum elit non
+                sapien suscipit bibendum. Sed ac ex eu nibh pharetra scelerisque nec at nunc. Nulla facilisi.</p>
+            <p>Curabitur venenatis arcu eget ex elementum, nec rutrum urna tincidunt. Quisque fermentum tincidunt
+                faucibus. Duis auctor quam id sapien lacinia, vitae bibendum risus ullamcorper. Nunc mollis
