--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">Accueil</a>
+    <a href="DevOps.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">DevOps ?</a>
+    <a href="Pipeline.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Pipeline</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Azure devOps</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Test1</a>
   </div>
-</div>
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
