modified:   src/DevOps.html 	new file:   src/tools.html

--- a/src/DevOps.html
+++ b/src/DevOps.html
@@ -72,7 +72,7 @@
         <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
         <a href="Benefic.html" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
         <a href="Principe.html" class="w3-bar-item w3-button">Principes clés</a>
-        <a href="#" class="w3-bar-item w3-button">Outils</a>
+        <a href="tools.html" class="w3-bar-item w3-button">Outils</a>
         <a href="#" class="w3-bar-item w3-button">Conclusion</a>
     </nav>
 
