modified:   src/Benefic.html 	modified:   src/DevOps.html 	src/conclusion.html

--- a/src/Benefic.html
+++ b/src/Benefic.html
@@ -65,10 +65,15 @@
 </head>
 
 <body>
-    <div class="w3-sidebar w3-teal">
-        <ul class="w3-navbar">
-            <li><a href="DevOps.html">Retour</a></li>
-
+     <!-- Sidebar -->
+     <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+        <h4 class="w3-bar-item">Menu</h4>
+        <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
+        <a href="Benefic.html" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
+        <a href="Principe.html" class="w3-bar-item w3-button">Principes clés</a>
+        <a href="tools.html" class="w3-bar-item w3-button">Outils</a>
+        <a href="conclusion.html" class="w3-bar-item w3-button">Conclusion</a>
+    </nav>
         </ul>
     </div>
 
