--- a/src/tools.html
+++ b/src/tools.html
@@ -63,32 +63,36 @@
         }
     </style>
 </head>
+<!-- Sidebar -->
+<nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+    <h4 class="w3-bar-item">Menu</h4>
+    <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
+    <a href="Benefic.html" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
+    <a href="Principe.html" class="w3-bar-item w3-button">Principes clés</a>
+    <a href="tools.html" class="w3-bar-item w3-button">Outils</a>
+    <a href="conclusion.html" class="w3-bar-item w3-button">Conclusion</a>
 
-<body>
-    <div class="w3-sidebar w3-teal">
-        <ul class="w3-navbar">
-            <li><a href="DevOps.html">Retour</a></li>
-     
-        </ul>
-    </div>
+    <body>
 
-    <div id="main" class="w3-main">
-        <div class="w3-container w3-card-4">
-            <h1>Outils du DevOps</h1>
-            <ul>
-                <li>Jenkins</li>
-                <li>Git</li>
-                <li>Docker</li>
-                <li>Kubernetes</li>
-                <li>Ansible</li>
-                <li>Chef</li>
-                <li>Puppet</li>
-                <li>Prometheus</li>
-                <li>Grafana</li>
-                <li>ELK Stack (Elasticsearch, Logstash, Kibana)</li>
-            </ul>
         </div>
-    </div>
-</body>
+
+        <div id="main" class="w3-main">
+            <div class="w3-container w3-card-4">
+                <h1>Outils du DevOps</h1>
+                <ul>
+                    <li>Jenkins</li>
+                    <li>Git</li>
+                    <li>Docker</li>
+                    <li>Kubernetes</li>
+                    <li>Ansible</li>
+                    <li>Chef</li>
+                    <li>Puppet</li>
+                    <li>Prometheus</li>
+                    <li>Grafana</li>
+                    <li>ELK Stack (Elasticsearch, Logstash, Kibana)</li>
+                </ul>
+            </div>
+        </div>
+    </body>
 
 </html>
