modified:   src/Principe.html 	modified:   src/conclusion.html 	modified:   src/tools.html

--- a/src/tools.html
+++ b/src/tools.html
@@ -63,36 +63,35 @@
         }
     </style>
 </head>
-<!-- Sidebar -->
-<nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
-    <h4 class="w3-bar-item">Menu</h4>
-    <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
-    <a href="Benefic.html" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
-    <a href="Principe.html" class="w3-bar-item w3-button">Principes clés</a>
-    <a href="tools.html" class="w3-bar-item w3-button">Outils</a>
-    <a href="conclusion.html" class="w3-bar-item w3-button">Conclusion</a>
 
-    <body>
+<body>
+    <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+        <h4 class="w3-bar-item">Menu</h4>
+        <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
+        <a href="Benefic.html" class="w3-bar-item w3-button">Bénéfice du DevOps</a>
+        <a href="Principe.html" class="w3-bar-item w3-button">Principes clés</a>
+        <a href="tools.html" class="w3-bar-item w3-button">Outils</a>
+        <a href="conclusion.html" class="w3-bar-item w3-button">Conclusion</a>
+    </nav>
 
+    <div class="w3-main" style="margin-left:250px; margin-right:250px">
+        <div class="w3-container w3-card-4">
+            <h1>Outils du DevOps</h1>
+            <p>Voici quelques-uns des outils couramment utilisés en DevOps :</p>
+            <ul>
+                <li>Jenkins</li>
+                <li>Git</li>
+                <li>Docker</li>
+                <li>Kubernetes</li>
+                <li>Ansible</li>
+                <li>Chef</li>
+                <li>Puppet</li>
+                <li>Prometheus</li>
+                <li>Grafana</li>
+                <li>ELK Stack (Elasticsearch, Logstash, Kibana)</li>
+            </ul>
         </div>
+    </div>
+</body>
 
-        <div id="main" class="w3-main">
-            <div class="w3-container w3-card-4">
-                <h1>Outils du DevOps</h1>
-                <ul>
-                    <li>Jenkins</li>
-                    <li>Git</li>
-                    <li>Docker</li>
-                    <li>Kubernetes</li>
-                    <li>Ansible</li>
-                    <li>Chef</li>
-                    <li>Puppet</li>
-                    <li>Prometheus</li>
-                    <li>Grafana</li>
-                    <li>ELK Stack (Elasticsearch, Logstash, Kibana)</li>
-                </ul>
-            </div>
-        </div>
-    </body>
-
-</html>
+</html
