--- a/src/conclusion.html
+++ b/src/conclusion.html
@@ -75,6 +75,7 @@
     </nav>
 
 <body>
+    <div class="w3-main" style="margin-left:250px; margin-right:250px">
     <div class="w3-container w3-card-4">
         <h2>Conclusion du DevOps</h2>
         <p>
