--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>DevOps ESTIAM</title>
@@ -9,17 +9,18 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    /* Code CSS pour activer le défilement */
-    html {
-        scroll-behavior: smooth;
-    }
-
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
 </style>
 </head>
-<body> 
+<body>
  
 
 <!-- Navbar -->
