modified:   src/Pipeline.html

--- a/src/Pipeline.html
+++ b/src/Pipeline.html
@@ -55,8 +55,12 @@
         }
     </style>
 </head>
-<body>
 
+ <!-- Sidebar -->
+ <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
+    <h4 class="w3-bar-item">Menu</h4>
+    <a href="index.html" class="w3-bar-item w3-button w3-teal">Home</a>
+<body>
 
 <!-- Main Content -->
 <div class="w3-main" id="main">
