--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
- 
+<div class="element">
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -80,6 +80,7 @@
   <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Agilité, collaboration, excellence DevOps</h1>
   </div>
+</div>
 
   <!-- Footer -->
   <footer class="w3-container w3-padding-64 w3-center w3-opacity">
