--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <header class="w3-container w3-red w3-center" style="padding:128px 16px">
     <h1 class="w3-margin w3-jumbo">DevOps Day Start</h1>
     <p class="w3-xlarge">Template by Ouali, Theo & Elias</p>
-    <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href="DevOps.html">Get Started</button>
+    <a class="w3-button w3-black w3-padding-large w3-large w3-margin-top" href="DevOps.html">Get Started</a>
   </header>
   <!-- First Grid -->
   <div class="w3-row-padding w3-padding-64 w3-container">
