--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<div style="overflow-x: hidden; overflow-y: scroll; border:#000000 1px solid; width: 500px; height: 500px;>
+<div style="overflow-x: hidden; overflow-y: scroll; border:#000000 1px solid;"">
 
 <!-- Navbar -->
 <div class="w3-top">
