--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-<div class="body">
+<body class="body">
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -104,7 +103,6 @@
       }
     }
   </script>
-  </div>
 </body>
 
 </html>
