--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="style.css">
 
 </head>
-<body class="body">
+<body class="bodyStyle">
 
 <!-- Navbar -->
 <div class="w3-top">
