--- a/azureDevOps.html
+++ b/azureDevOps.html
@@ -36,45 +36,38 @@
         <header class="w3-container w3-red w3-center" style="padding:128px 16px">
             <h1 class="w3-margin w3-jumbo">DevOps Day Start</h1>
             <p class="w3-xlarge">Template by Ouali, Theo & Elias</p>
-        </header>
+    </div>
 
 
-        <div class="w3-row-padding w3-padding-64 w3-container">
-            <div class="w3-content">
-                <div class="w3-twothird">
-                    <h1>A propos de DevOps</h1>
-                    <h5 class="w3-padding-32">DevOps est un ensemble de pratiques qui combine le développement logiciel (Dev) et les opérations
-                        informatiques (Ops). Son objectif est de raccourcir le cycle de vie du développement des systèmes
-                        tout en livrant fréquemment des fonctionnalités, des correctifs et des mises à jour en étroite
-                        collaboration entre les équipes de développement et les équipes opérationnelles.
-    </h5>
-                </div>
-                <div class="w3-third w3-center">
-                    <img src="vectorielle.jpg" alt="Vectorielle DevOps" width="350px">
-                </div>
-            </div>
+
+
+
+
+<!-- TON CONTENNUUUUUUU -->
+
+
+
+
+
+
+
+
+    <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+        <h1 class="w3-margin w3-xlarge">AgilitÃ©, collaboration, excellence DevOps</h1>
+    </div>
+
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity">
+        <div class="w3-xlarge w3-padding-32">
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-instagram w3-hover-opacity"></i>
+            <i class="fa fa-snapchat w3-hover-opacity"></i>
+            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-
-
-
-
-
-                <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-            <h1 class="w3-margin w3-xlarge">Agilité, collaboration, excellence DevOps</h1>
-        </div>
-
-        <!-- Footer -->
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity">
-            <div class="w3-xlarge w3-padding-32">
-                <i class="fa fa-facebook-official w3-hover-opacity"></i>
-                <i class="fa fa-instagram w3-hover-opacity"></i>
-                <i class="fa fa-snapchat w3-hover-opacity"></i>
-                <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-                <i class="fa fa-twitter w3-hover-opacity"></i>
-                <i class="fa fa-linkedin w3-hover-opacity"></i>
-            </div>
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-        </footer>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </footer>
 </body>
 
 </html>
